--- a/css/fixedNav.css
+++ b/css/fixedNav.css
@@ -154,7 +154,7 @@
         transition: border-bottom-right-radius .05s;
     }
 
-    #phone-logo:hover .dropdown {
+    #phone-logo:active .dropdown {
         transition: all .3s .05s;
         height: 40vh;
         width: 200px;
@@ -171,7 +171,7 @@
         text-decoration: none;
     }
 
-    #phone-logo:hover .dropdown li {
+    #phone-logo:active .dropdown li {
         width: 200px;
     }
 
@@ -187,7 +187,7 @@
         color: rgb(212, 212, 212);
     }
 
-    #phone-logo:hover .dropdown li a {
+    #phone-logo:active .dropdown li a {
 		visibility: visible;
 		transition: visibility 0s .3s;
     }
