--- a/css/parallax.css
+++ b/css/parallax.css
@@ -16,7 +16,7 @@ body {
     margin: 0;
     padding: 0;
     background-attachment: fixed;
-    background-position: center;
+    background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
 
